Fixes a few typos, and makes minor adjustments.

--- a/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
+++ b/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
@@ -47,8 +47,8 @@ Cette méthode de travail est la \emph{meilleure}, d'expérience d'élève en cl
 \paragraph{Compléments :}
 Certaines sections dont le titre commence par complément
 ne sont pas indispensables à la suite du cours.
-Il sont là pour la culture, ou par soucis d'exhaustivité,
-ou encore s'addresse à un publique particulier.
+Elles sont là pour la culture, ou par soucis d'exhaustivité,
+ou encore s'addressent à un publique particulier.
 Vous pouvez les laisser de coté lors d'une première lecture.
 \subsection{Risque d’évolution}
 Ce cours est susceptible d'évoluer rapidement,
