--- a/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
+++ b/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
@@ -9,7 +9,7 @@ On peut cependant s'inscrire gratuitement en tant que développeur
 avec son Apple ID sur le
 \TSwiftUrl{http://developer.apple.com/}{site consacré aux développeurs}{Site d'Apple pour les développeurs},
 pour accéder aux divers ressource, dont la documentation,
-je vous recommande donc de le faire.
+ce que je vous recommande de faire.
 (Attention, les programmes payants ne sont pas nécessaires,
 il servent juste à pouvoir soumettre des applications sur les App Store,
 et pouvoir signer son code, pour la distribution via internet)
@@ -18,7 +18,7 @@ Une fois les quelques Giga-octets de l'application téléchargés
 vous verrez l'application apparaitre dans votre dossier application.
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.30]{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXcode/img/Launchpad}
+\includegraphics[scale=0.25]{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXcode/img/Launchpad}
 \caption{L'icône de Xcode dans la pile Applications}
 \end{figure}
 
