--- a/Preface.tex
+++ b/Preface.tex
@@ -8,13 +8,16 @@ Vous y apprendrez à programmer à partir de Zér0\footnote{Dédicace à feu le 
 C'est mon premier gros cours, donc n'hésitez pas à faire remonter tout ce qui vous semble utile de rapporter.
 
 Les Sources LaTeX et le "bugtracker" se trouvent \TSwiftUrl{https://github.com/GuillaumeDIDIER/TutorielSwift}{sur le dépot github ici}{Dépot Github du tutoriel}
-Je le PDF du cours est aussi disponible de façon provisoire \TSwiftUrl{https://onedrive.live.com/redir?resid=E2E36645B7EB4EE3!168&authkey=!AOH8IUaG-amgJ38&ithint=file\%2cpdf}{ici}{PDF du cours}.
+Le PDF du cours est aussi disponible de façon provisoire \TSwiftUrl{https://onedrive.live.com/redir?resid=E2E36645B7EB4EE3!168&authkey=!AOH8IUaG-amgJ38&ithint=file\%2cpdf}{ici}{PDF du cours}.
 
 En ce qui concerne OpenClassrooms, ce cours diffère du cours de Spader en cela qu'il se veut plus exigeant mais plus gratifiant, pour vous emmener plus loin, et plus rigoureux et exhaustif.
-Je ne dis pas que son cours est moins bien, juste différent,
-il se veut en effet moins exigeant.
+Je ne dis pas que son cours est moins bien, juste différent.
 
 En étudiant ce cours
 (désolé de vous dire que c'est du bouleau et pas de la salade)
-vous acquerrez de véritable compétence en programmation,
+vous acquerrez de véritables méthodes et compétences en programmation,
 par le biais de nombreux exercices parsemé à travers ces pages.
+
+Cher lecteur si tu es d'accord avec ce projet, accroches-toi et attention pour le décollage.
+
+% Todo : Photo rafale PC au décollage.
